Created Data Driven Test suite

--- a/.project
+++ b/.project
@@ -21,6 +21,21 @@
 			<type>1</type>
 			<location>C:/Users/vishw/AppData/Local/Temp/Katalon/Web Services/kat-3867901307142713150.groovy</location>
 		</link>
+		<link>
+			<name>kat-4880940823091239173.groovy</name>
+			<type>1</type>
+			<location>C:/Users/vishw/AppData/Local/Temp/Katalon/Web Services/kat-4880940823091239173.groovy</location>
+		</link>
+		<link>
+			<name>kat-62486325777870747.groovy</name>
+			<type>1</type>
+			<location>C:/Users/vishw/AppData/Local/Temp/Katalon/Web Services/kat-62486325777870747.groovy</location>
+		</link>
+		<link>
+			<name>kat-904588537498409868.groovy</name>
+			<type>1</type>
+			<location>C:/Users/vishw/AppData/Local/Temp/Katalon/Web Services/kat-904588537498409868.groovy</location>
+		</link>
 	</linkedResources>
 	<filteredResources>
 		<filter>
