--- a/settings/internal/com.kms.katalon.integration.analytics.properties
+++ b/settings/internal/com.kms.katalon.integration.analytics.properties
@@ -1,7 +1,7 @@
-#Wed Apr 24 13:52:19 EDT 2019
-analytics.integration.enable=false
+#Thu Apr 25 09:25:47 EDT 2019
+analytics.integration.enable=true
 analytics.authentication.token="mD+lrVewrax7FTcKA+4p+UlNE9GDEl7B7aCBBzaO3GatFmPKvrv0xQ\=\="
-analytics.project="{\\n  \\"id\\"\: 20743,\\n  \\"name\\"\: \\"TestProject\\",\\n  \\"teamId\\"\: 16323\\n}"
+analytics.project="{\\n  \\"id\\"\: 20741,\\n  \\"name\\"\: \\"First Project\\",\\n  \\"teamId\\"\: 16323\\n}"
 analytics.server.endpoint="JkYzbGlbK9hM2kll81qSoXfzapQDQgaKmEIPN3wKSiw\="
 analytics.authentication.email="1HHgNaJbfbGimdm5x63uUzY6LflaiAv7"
 analytics.authentication.password="gPkdzmTweiLPws8jgIU7ag\=\="
