Created RESTAPI Parameterization and Chaining

--- a/.project
+++ b/.project
@@ -17,6 +17,16 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>kat-286658140508914483.groovy</name>
+			<type>1</type>
+			<location>C:/Users/vishw/AppData/Local/Temp/Katalon/Web Services/kat-286658140508914483.groovy</location>
+		</link>
+		<link>
+			<name>kat-3806251010022908333.groovy</name>
+			<type>1</type>
+			<location>C:/Users/vishw/AppData/Local/Temp/Katalon/Web Services/kat-3806251010022908333.groovy</location>
+		</link>
+		<link>
 			<name>kat-3867901307142713150.groovy</name>
 			<type>1</type>
 			<location>C:/Users/vishw/AppData/Local/Temp/Katalon/Web Services/kat-3867901307142713150.groovy</location>
